--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -1,44 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'partials/base.html' %}
 
-<head>
-    <link rel="icon" type="image/x-icon" href="/static/icone.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
-    <title>Création QCM</title>
-</head>
-
-<body>
-    {%include 'partials/_nav.html'%}
-    <div class="menu">
-        <form action="/generate" method="POST">
-            <!--ce form permet d'afficher la liste des question -->
-            <h1>Créer votre examen</h1>
-            <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" /></p>
-            <div class="liste">
-                <table>
-                    <tr class="top">
-                        <td>Sélectionner</td>
-                        <td>Questions</td>
-                    </tr>
-                    {%for element in ListesQuestions%}
-                    <tr>
-                        <td><input type="checkbox" name="{{element.idQ}}"></td>
-                        <td class="left" id="{{element.idQ}}">{{element.enonce}}</td>
-                        <script>                                                /* converti chaque énoncé */
-                            $('#{{element.idQ}}').html(converter.makeHtml($('#{{element.idQ}}').text()));
-                        </script>
-                    </tr>
-                    {%endfor%}
-                </table>
-            </div>
-            <p><input class="button" type="submit" value="Confirmer" /></p>
-        </form>
-    </div>
-    {%include 'partials/footer.html'%}
-</body>
-
-</html>
+{% block main %}
+<div class="menu">
+    <form action="/generate" method="POST">
+        <!--ce form permet d'afficher la liste des question -->
+        <h1>Créer votre examen</h1>
+        <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" /></p>
+        <div class="liste">
+            <table>
+                <tr class="top">
+                    <td>Sélectionner</td>
+                    <td>Questions</td>
+                </tr>
+                {%for element in ListesQuestions%}
+                <tr>
+                    <td><input type="checkbox" name="{{element.idQ}}"></td>
+                    <td class="left" id="{{element.idQ}}">{{element.enonce}}</td>
+                    <script>                                                /* converti chaque énoncé */
+                        $('#{{element.idQ}}').html(converter.makeHtml($('#{{element.idQ}}').text()));
+                    </script>
+                </tr>
+                {%endfor%}
+            </table>
+        </div>
+        <p><input class="button" type="submit" value="Confirmer" /></p>
+    </form>
+</div>
+{% endblock %}
