--- a/templates/lQCM.html
+++ b/templates/lQCM.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'partials/base.html' %}
 
-<head>
-    <link rel="icon" type="image/x-icon" href="/static/icone.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
-    <title>Votre QCM</title>
-</head>
-<body>
-    {%include 'partials/_nav.html'%}
-    <div class="menu">
-        <h1>Liste des QCM</h1>
-        <div class="liste">
-            <table>
-                <tr class="top">
-                    <td>QCM</td>
-                </tr>
-                {% for QCM in listeQCM %}
-                <tr>
-                    <td class="left" id="{{QCM.idQCM}}">{{QCM.Nom}}</td>    
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
+{% block main %}
+<div class="menu">
+    <h1>Liste des QCM</h1>
+    <div class="liste">
+        <table>
+            <tr class="top">
+                <td>QCM</td>
+            </tr>
+            {% for QCM in listeQCM %}
+            <tr>
+                <td class="left" id="{{QCM.idQCM}}">{{QCM.Nom}}</td>    
+            </tr>
+            {% endfor %}
+        </table>
     </div>
-    {%include 'partials/footer.html'%}
-</body>
-</html>
+</div>
+{% endblock %}
