--- a/templates/lUtilisateurs.html
+++ b/templates/lUtilisateurs.html
@@ -1,34 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'partials/base.html' %}
 
-<head>
-    <link rel="icon" type="image/x-icon" href="/static/icone.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
-    <title>PRIVATE</title>
-</head>
-
-<body>
-    {%include 'partials/_nav.html'%}
-    <div class="menu">
-        <h1>Utilisateurs</h1>
-        <div class="liste">
-            <table>
-                <tr class="top">
-                    <td>Nom d'utilisateur</td>
-                    <td>Mot de passe</td>
-                </tr>
-                {% for utilisateurs in lUtilisateurs %}         <!-- Affiche chaque utilisateur avec son mot de passe -->
-                <tr>                                            <!-- Rappel : cette page est uniquement accessible si -->
-                    <td>{{utilisateurs.nomU}}</td>              <!-- l'utilisateur est 'ADMIN' -->
-                    <td>{{utilisateurs.passU}}</td>
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
+{% block main %}
+<div class="menu">
+    <h1>Utilisateurs</h1>
+    <div class="liste">
+        <table>
+            <tr class="top">
+                <td>Nom d'utilisateur</td>
+                <td>Mot de passe</td>
+            </tr>
+            {% for utilisateurs in lUtilisateurs %}         <!-- Affiche chaque utilisateur avec son mot de passe -->
+            <tr>                                            <!-- Rappel : cette page est uniquement accessible si -->
+                <td>{{utilisateurs.nomU}}</td>              <!-- l'utilisateur est 'ADMIN' -->
+                <td>{{utilisateurs.passU}}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </div>
-    {%include 'partials/footer.html'%}
-</body>
+</div>
+{% endblock %}
