--- a/templates/compte/connexionEnseignant.html
+++ b/templates/compte/connexionEnseignant.html
@@ -1,38 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'partials/base.html' %}
 
-<head>
-    <link rel="icon" type="image/x-icon" href="/static/icone.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
-    <title>Connexion Enseignant</title>
-</head>
-
-<body>
-    {%include 'partials/_nav.html'%}
-    <div class="menu">
-        <h1>Connexion</h1>
-        <!-- <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p> -->
-        <hr/>
-        {% with messages = get_flashed_messages() %}       <!-- Récupère les messages de flash() du serveur -->
-            {% if messages %}
-                <div class="flashes">
-                    {% for message in messages %}
-                        <p>{{ message }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        {% endwith %}
-        <form action="/connexionEnseignant" method="POST">                                     <!-- Connexion d'un utilisateur -->
-            <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>   <!-- Nom correspondant -->
-            <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>  <!-- Mot de passe correspondant-->
-            <p><input class="button" type="submit" value="Connexion" /></p>
-        </form>
-    </div>
-    {%include 'partials/footer.html'%}
-</body>
-
-</html>
+{% block main %}
+<div class="menu">
+    <h1>Connexion</h1>
+    <!-- <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p> -->
+    <hr/>
+    {% with messages = get_flashed_messages() %}       <!-- Récupère les messages de flash() du serveur -->
+        {% if messages %}
+            <div class="flashes">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
+    <form action="/connexionEnseignant" method="POST">                                     <!-- Connexion d'un utilisateur -->
+        <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>   <!-- Nom correspondant -->
+        <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>  <!-- Mot de passe correspondant-->
+        <p><input class="button" type="submit" value="Connexion" /></p>
+    </form>
+</div>
+{% endblock %}
