--- a/templates/compte/creationCompteEnseignant.html
+++ b/templates/compte/creationCompteEnseignant.html
@@ -1,29 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'partials/base.html' %}
 
-<head>
-    <link rel="icon" type="image/x-icon" href="/static/icone.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
-    <title>Creation de compte</title>
-</head>
-
-<body>
-    {%include 'partials/_nav.html'%}
-    <div class="menu">
-        <h1>Créer votre compte</h1>
-        <!-- <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p> -->
-        <hr/>
-        <form action="/creationCompteEnseignant" method="POST">                             <!-- Création du compte -->
-            <p> Nom d'utilisateur : </p><input type="text" name="creationNom"/>   <!-- Avec un nom -->
-            <p> Mot de passe : </p><input type="password" name="creationMdp"/>    <!-- Et un mot de passe -->
-            <p><input class="button" type="submit" value="Créer" /></p>
-        </form>
-    </div>
-    {%include 'partials/footer.html'%}
-</body>
-
-</html>
+{% block main %}
+<div class="menu">
+    <h1>Créer votre compte</h1>
+    <!-- <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p> -->
+    <hr/>
+    <form action="/creationCompteEnseignant" method="POST">                             <!-- Création du compte -->
+        <p> Nom d'utilisateur : </p><input type="text" name="creationNom"/>   <!-- Avec un nom -->
+        <p> Mot de passe : </p><input type="password" name="creationMdp"/>    <!-- Et un mot de passe -->
+        <p><input class="button" type="submit" value="Créer" /></p>
+    </form>
+</div>
+{% endblock %}
