--- a/templates/compte/modifMdp.html
+++ b/templates/compte/modifMdp.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="icon" type="image/x-icon" href="/static/icone.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
-    <title>Modification Mot de passe</title>
-</head>
+{% extends 'partials/base.html' %}
 
-<body>
-    {%include 'partials/_nav.html'%}
-    <div class="menu">
-        <h1>Modifier votre <br> mot de passe</h1>
-        <form action="{{ url_for('modifMdp', id=idMAModif)}}" method="POST">  <!-- Création d'un etudiant' -->
-            <p> Mot de passe actuel : <input type="password" name="mdpActu" id="mdpActu"/></p>           <!-- Avec un nom -->
-            <p> Nouveau mot de passe : <input type="password" name="nMdp" id="nMdp"/></p>  <!-- Avec un prenom -->
-            <p><input class="button" type="submit" value="Modifier" /></p>
-        </form>
-    </div>
-    {%include 'partials/footer.html'%}
-</body>
-</html>
+{% block main %}
+<div class="menu">
+    <h1>Modifier votre <br> mot de passe</h1>
+    <form action="{{ url_for('modifMdp', id=idMAModif)}}" method="POST">  <!-- Création d'un etudiant' -->
+        <p> Mot de passe actuel : <input type="password" name="mdpActu" id="mdpActu"/></p>           <!-- Avec un nom -->
+        <p> Nouveau mot de passe : <input type="password" name="nMdp" id="nMdp"/></p>  <!-- Avec un prenom -->
+        <p><input class="button" type="submit" value="Modifier" /></p>
+    </form>
+</div>
+{% endblock %}
