--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -2,7 +2,7 @@
     <label for="{{IdCheck}}" aria-describedby="label">
 <span class="Checked"></span></label>
     <textarea id="{{ IdBouton }}" name="reponse" rows="2" cols="30" onkeyup="visualiser()" placeholder="Réponse"></textarea></p>
-<input class="delete" type="image" src="/static/delete.png" onclick="supprimerBouton({{ IdBouton }})" onclick="supprimerBouton({{ IdCheck }})" id="{{ IdBouton }}">
+<input class="delete" type="image" src="/static/image/delete.png" onclick="supprimerBouton({{ IdBouton }})" onclick="supprimerBouton({{ IdCheck }})" id="{{ IdBouton }}">
 
 <!-- 
     HTML qui s'affiche chaque fois qu'on ajoute une réponse
