--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    background-image: url("fond.png");
+    background-image: url("image/fond.png");
     background-size: cover;
     width: 100vw;
     margin: 0;
