--- a/templates/liste/lEtudiants.html
+++ b/templates/liste/lEtudiants.html
@@ -37,7 +37,7 @@
             <form action="/listeEtudiants" method="POST">
                 <p> Nom : <input type="text" name="nomEtu" id="nomEtu"/></p>
                 <p> Prenom : <input type="text" name="prenomEtu" id="prenomEtu"/></p>
-                <p> Numéro d'étudiant : <input type="password" name="numeroEtu" id="numeroEtu"/></p>
+                <p> Numéro d'étudiant : <input type="number" name="numeroEtu" id="numeroEtu"/></p>
                 <p><input class="button" type="submit" value="Ajouter" /></p>
             </form>
         </div>
