--- a/templates/question/modifQuestion.html
+++ b/templates/question/modifQuestion.html
@@ -1,6 +1,4 @@
-{% extends 'partias/base.html' %}
-
-{% block main %}
+{% extends 'partials/base.html' %} {% block main %}
 <div class="double menu">
     <!-- <form action="/visual" method="POST"> -->
     <form class="double" action="{{ url_for('modifier', id=idQ)}}" method="POST">
@@ -28,11 +26,12 @@
             {% for reponse in reponses %}
             <!-- Pour chaque réponse parmis les réponses -->
             {%if reponse.estNumerique %}
-            <p id="rep_num"><input type="text" id="Rep_num" name="R{{reponse.idR}}" pattern="[\d*([.]\d{0,2})?" value="{{reponse.reponse}}"></p>
+            <p id="rep_num"><input type="text" id="Rep_num" name="R{{reponse.idR}}" pattern="\d*([.]\d{0,2})?" value="{{reponse.reponse}}"></p>
             <!-- <p><input class="button" type="submit" value="Ajouter la question" /></p> -->
-
+            <p>congolais</p>
             {%else%}
             <p><textarea name="R{{reponse.idR}}" rows="4" cols="40">{{reponse.reponse}}</textarea></p>
+            <p>raciste</p>
             {%endif%} {% endfor %}
             <p><input class="button" type="submit" value="Modifier" /></p>
         </div>
